environments/apps/sillytavern/sillytavern-app.yaml
apiVersion: v1
kind: Service
metadata:
  # annotations:
  #   tailscale.com/expose: "true"
  name: sillytavern-svc
  namespace: sillytavern
# spec:
#   selector:
#     app: sillytavern
#   type: ClusterIP
#   ports:
#     - name: http
#       protocol: TCP
#       port: 80
#       targetPort: 8000
spec:
  selector:
    app: sillytavern
  type: NodePort
  ports:
    - protocol: TCP
      port: 80       # Service 在集群内部的端口
      targetPort: 8000   # 流量最终要转发到容器的端口
      # 2. (可选但推荐) 我们手动指定一个对外暴露的 NodePort 端口
      nodePort: 30080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sillytavern
  namespace: sillytavern
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sillytavern
  template:
    metadata:
      labels:
        app: sillytavern
    spec:
      containers:
        - name: sillytavern-container
          image: ghcr.io/sillytavern/sillytavern:1.13.3
          ports:
            - containerPort: 8000
          # envFrom:
          #   - configMapRef:
          #       name: sillytavern-env-config
          resources:
            requests:
              cpu: "250m"
              memory: "1Gi"
            # limits:
            #   cpu: "2000m"
            #   memory: "4Gi"
          volumeMounts:
            - name: data
              mountPath: /home/node/app/config
              subPath: config
            - name: data
              mountPath: /home/node/app/data
              subPath: data
            - name: data
              mountPath: /home/node/app/plugins
              subPath: plugins
            - name: data
              mountPath: /home/node/app/public/scripts/extensions/third-party
              subPath: extensions
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: sillytavern-data
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #       - matchExpressions:
      #         - key: performance
      #           operator: In
      #           values:
      #           - low
      #           - high
      #     preferredDuringSchedulingIgnoredDuringExecution:
      #     - weight: 100
      #       preference:
      #         matchExpressions:
      #         - key: tier
      #           operator: In
      #           values:
      #           - plus
      #     # preferredDuringSchedulingIgnoredDuringExecution:
      #     # - weight: 100
      #     #   preference:
      #     #     matchExpressions:
      #     #     - key: tier
      #     #       operator: In
      #     #       values:
      #     #       - pro
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sillytavern-ingress
  namespace: sillytavern
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: "silly.textverse.top"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sillytavern-svc
                port:
                  number: 80
  tls:
    - hosts:
        - "silly.textverse.top"
      secretName: sillytavern-tls
